--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -355,18 +355,23 @@
             </div>
             <div class="modal-body">
               <div class="form-row">
+                <div class="form-group col-md-12 col-sm-10" *ngFor="let imp of impresoraEmpresa">
+                  {{imp.numero_impresora}}. {{imp.nombre_impresora}}
+                </div>
+              </div>
+              <div class="form-row">
                 <div class="form-group col-md-6 col-sm-10">
                   Digite el número de impresora:
                 </div>
                 <div class="form-group col-md-6 col-sm-2">
-                  <input class="form-control" id="impresora" type="number" placeholder="Digite el número de impresora:"
-                    name="impresora" #impresora required>
+                  <input class="form-control" id="impresoraOrden" type="number" placeholder="Digite el número de impresora:"
+                    name="impresoraOrden" #impresoraOrden required>
                 </div>
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-              <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresora)">Imprimir</button>
+              <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresoraOrden)">Imprimir</button>
             </div>
           </div>
         </div>
@@ -433,18 +438,17 @@
       <br />
       <div class="form-row">
         <div class="form-group col-md-2 col-sm-12 ">
-          <button type="button" class="btn btn-primary " id="anterior"
-            (click)="teclaAnteriorSiguiente('anterior')">Anterior</button>
+          <button type="button" class="btn btn-primary " (click)="teclaAnteriorSiguienteFactura('anterior')">Anterior</button>
 
-          <button type="button" class="btn btn-primary ml-2" id="siguiente"
-            (click)="teclaAnteriorSiguiente('siguiente')">Siguiente</button>
+          <button type="button" class="btn btn-primary ml-2"
+            (click)="teclaAnteriorSiguienteFactura('siguiente')">Siguiente</button>
         </div>
         <div class="form-group col-md-2 col-sm-12 ">
           <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarModal">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buscarFacturaModal">
             Buscar
           </button>
-          <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#imprimirModal">
+          <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#imprimirModalFactura">
             Imprimir
           </button>
         </div>
@@ -459,8 +463,8 @@
         <div class="form-group col-md-9 col-sm-12 ">
           <div class="form-row">
             <div class="form-group col-md-4 col-sm-2">
-              <input list="browsers" name="clienteFactura" #clienteFactura placeholder="Cliente" class="form-control" id="clienteFactura"
-                (change)="clienteSelectFactura(clienteFactura)">
+              <input list="browsers" name="clienteFactura" #clienteFactura placeholder="Cliente" class="form-control"
+                id="clienteFactura" (change)="clienteSelectFactura(clienteFactura)">
             </div>
             <div class="form-group col-md-4 col-sm-2">
               <b>Fecha entrada:</b> {{documentoFactura.fecha_registro | date: 'dd/MM/yyyy, h:mm a'}}
@@ -473,39 +477,34 @@
             <button type="button" class="btn btn-primary mb-2" data-toggle="modal" data-target="#agregarOrdenModal">
               Agregar Ordenes de trabajo
             </button>
+
           </div>
           Ordenes de trabajo
           <table class="table table-hover">
             <thead>
               <tr>
                 <th scope="col">Opciones</th>
-                <th scope="col">Empleado</th>
+                <th scope="col"># Orden</th>
                 <th scope="col">Cliente</th>
-                <th scope="col" >Placa</th>
+                <th scope="col">Placa</th>
                 <th scope="col">Total</th>
-                
-    
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let ordenes of ordenesFactura">
+              <tr *ngFor="let ordenes of ordenesBuscarListFacturaSelect">
                 <th scope="row">
-                  <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                    data-target="#exampleModal">
-                    Editar
-                  </button>
                   <!-- Button trigger modal -->
-                  <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                    data-target="#eliminarModal">
+                  <button type="button" (click)="eliminarOrden(ordenes)" class="btn btn-secondary btn-sm"
+                   >
                     Eliminar
                   </button>
                 </th>
-                <td></td>
-                <td></td>
-                <td ></td>
-                <td></td>
-                
-    
+                <td>{{nombreUsuarioFiltro(ordenes.usuario_id)}}</td>
+                <td>{{ordenes.documento_id}}</td>
+                <td>{{nombreClienteFun(ordenes.detalle_entrada)}}</td>
+                <td>${{formatearNumber(ordenes.total)}}</td>
+
+
               </tr>
             </tbody>
           </table>
@@ -513,77 +512,247 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">Opciones</th>
-                <th scope="col">Empleado</th>
-                <th scope="col">Cliente</th>
-                <th scope="col" >Placa</th>
-                <th scope="col">Total</th>
-                
-    
+                <th scope="col">Nombre</th>
+                <th scope="col">Orden</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Unitario</th>
+                <th scope="col">Impuesto %</th>
+                <th scope="col">Parcial</th>
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let ordenes of itemsFactura">
-                <th scope="row">
-                  <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                    data-target="#exampleModal">
-                    Editar
-                  </button>
-                  <!-- Button trigger modal -->
-                  <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
-                    data-target="#eliminarModal">
-                    Eliminar
-                  </button>
-                </th>
-                <td></td>
-                <td></td>
-                <td ></td>
-                <td></td>
-                
-    
+
+                <td>{{ordenes.descripcion}}</td>
+                <td>{{ordenes.documento_id}}</td>
+                <td>{{ordenes.cantidad}}</td>
+                <td>${{formatearNumber(ordenes.unitario)}}</td>
+                <td> <select class="form-control" value="{{ordenes.impuesto_producto}}" (change)="calcularIva(ordenes, impuesto) " #impuesto>
+                    <option>0</option>
+                    <option>0.4</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>8</option>
+                    <option>16</option>
+                    <option>19</option>
+                  </select></td>
+                <td>${{formatearNumber(ordenes.parcial)}}</td>
               </tr>
             </tbody>
           </table>
           <div class="form-row">
-            <textarea class="form-control mb-2" id="observacionFactura" #observacionFactura
-            placeholder="Observación" required
-            (blur)="agregarDescripcionCliente(observacionFactura)"></textarea>
+            <textarea class="form-control mb-2" id="observacionFac" #observacionFact placeholder="Observación"
+              required (blur)="observacionFactura()"></textarea>
           </div>
         </div>
         <div class="form-group col-md-3 col-sm-12 ">
-          <div class="form-group col-md-12 col-sm-12 ">
-            <h5>Vr. exento: $</h5>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5><b>Vr. exento:</b></h5>
+            </div>
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5>${{formatearNumber(documentoFactura.excento)}}</h5>
+            </div>
           </div>
-          <div class="form-group col-md-12 col-sm-12 ">
-            <h5>Vr. gravado: $</h5>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5><b>Vr. gravado:</b></h5>
+            </div>
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5>${{formatearNumber(documentoFactura.gravado)}}</h5>
+            </div>
           </div>
-          <div class="form-group col-md-12 col-sm-12 ">
-            <h5>Vr. IVA: $</h5>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5><b>Vr. IVA:</b></h5>
+            </div>
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5>${{formatearNumber(documentoFactura.iva)}}</h5>
+            </div>
           </div>
-          <div class="form-group col-md-12 col-sm-12 ">
-            <h5>Vr. Total: $</h5>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5><b>Vr. Total:</b></h5>
+            </div>
+            <div class="form-group col-md-6 col-sm-12 ">
+              <h5>${{formatearNumber(documentoFactura.total)}}</h5>
+            </div>
           </div>
         </div>
       </div>
 
-
-        <!-- Modal agregar ordenes de trabajo -->
-        <div class="modal fade  bd-example-modal-xl" id="agregarOrdenModal" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <!-- Modal agregar ordenes de trabajo -->
+      <div class="modal fade  bd-example-modal-xl" id="agregarOrdenModal" tabindex="-1" role="dialog"
+        aria-labelledby="agregarOrdenModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Buscar Orden de trabajo</h5>
+              <h5 class="modal-title" id="agregarOrdenModalLabel">Buscar Orden de trabajo</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-             
+              <div class="form-row">
+                <div class="form-group col-md-6 col-sm-1">
+                  Fecha Inicial
+                  <input class="form-control" type="date" value="2020-01-01" id="fechaIniFactura" #fechaIniFactura>
+                </div>
+                <div class="form-group col-md-6 col-sm-1">
+                  Fecha Final
+                  <input class="form-control" type="date" value="2020-12-31" id="fechaFinFactura" #fechaFinFactura>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-6 col-sm-2">
+                  <input list="browsers" name="clienteBuscarFactura" #clienteBuscarFactura placeholder="Cliente"
+                    class="form-control" id="clienteBuscarFactura">
+                </div>
+                <div class="form-group col-md-6 col-sm-2">
+                  <input class="form-control" id="placaBuscarFactura" placeholder="Placa" name="placaBuscarFactura"
+                    #placaBuscarFactura required>
+                </div>
+              </div>
+              <button type="button" class="btn btn-primary mr-2"
+                (click)="buscarOrdenesFactura(placaBuscarFactura,clienteBuscarFactura,fechaIniFactura,fechaFinFactura)">Buscar</button>
+              <button type="button" class="btn btn-primary  mr-2"
+                (click)="confirmarAgregarOrdenes('s')">Confirmar</button>
+              <button type="button" class="btn btn-primary  mr-2"
+                (click)="confirmarAgregarOrdenes('n')">Cancelar</button>
+              <br />
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">
+                      <input class="form-check-input position-static ml-2" (change)="selectOrdenAll($event)"
+                        type="checkbox" aria-label="...">
+                    </th>
+                    <th scope="col"># Orden</th>
+                    <th scope="col">Nombre Cliente</th>
+                    <th scope="col">Placa</th>
+                    <th scope="col">Cerrada</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let ordenes of ordenesBuscarListFactura">
+                    <th scope="row">
+                      <input class="form-check-input position-static ml-2" (change)="selectOrdenOne(ordenes,$event)"
+                        type="checkbox" aria-label="...">
+                    </th>
+                    <td>{{ordenes.documento_id}}</td>
+                    <td>{{nombreClienteFun(ordenes.cliente_id)}}</td>
+                    <td>{{ordenes.detalle_entrada}}</td>
+                    <td>{{ordenes.cierre_diario==0?'No':'Si'}}</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
+
+       <!-- Modal imprimir factura-->
+       <div class="modal fade bd-example-modal-sm" id="imprimirModalFactura" tabindex="-1" role="dialog"
+       aria-labelledby="exampleModalLabel" aria-hidden="true">
+       <div class="modal-dialog modal-sm" role="document">
+         <div class="modal-content">
+           <div class="modal-header">
+             <h5 class="modal-title" id="exampleModalLabel">Imprimir Factura</h5>
+             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+             </button>
+           </div>
+           <div class="modal-body">
+            <div class="form-row">
+              <div class="form-group col-md-12 col-sm-10" *ngFor="let imp of impresoraEmpresa">
+                {{imp.numero_impresora}}. {{imp.nombre_impresora}}
+              </div>
+            </div>
+             <div class="form-row">
+               <div class="form-group col-md-6 col-sm-10">
+                 Digite el número de impresora:
+               </div>
+               
+               <div class="form-group col-md-6 col-sm-2">
+                 <input class="form-control" id="impresora" type="number" placeholder="Digite el número de impresora:"
+                   name="impresora" #impresora required>
+               </div>
+             </div>
+           </div>
+           <div class="modal-footer">
+             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+             <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresora)">Imprimir</button>
+           </div>
+         </div>
+       </div>
+     </div>
+
+       <!-- Modal buscar -->
+       <div class="modal fade  bd-example-modal-xl" id="buscarFacturaModal" tabindex="-1" role="dialog"
+       aria-labelledby="exampleModalLabel" aria-hidden="true">
+       <div class="modal-dialog modal-xl" role="document">
+         <div class="modal-content">
+           <div class="modal-header">
+             <h5 class="modal-title" id="exampleModalLabel">Buscar Factura</h5>
+             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+             </button>
+           </div>
+           <div class="modal-body">
+             <div class="form-row">
+               <div class="form-group col-md-6 col-sm-1">
+                 Fecha Inicial
+                 <input class="form-control" type="date" value="2020-01-01" id="fechaInicial" #fechaInicial>
+               </div>
+               <div class="form-group col-md-6 col-sm-1">
+                 Fecha Final
+                 <input class="form-control" type="date" value="2020-12-31" id="fechaFinal" #fechaFinal>
+               </div>
+             </div>
+             <div class="form-row">
+               <div class="form-group col-md-6 col-sm-2">
+                 <input list="browsers" name="clienteBuscarFacturas" #clienteBuscarFacturas placeholder="Cliente"
+                   class="form-control" id="clienteBuscarFacturas">
+               </div>
+               <div class="form-group col-md-6 col-sm-2">
+                 <input class="form-control" id="placaFactura" placeholder="Placa" name="placaFactura" #placaFactura
+                   required>
+               </div>
+             </div>
+             <button type="button" class="btn btn-primary"
+               (click)="buscarFacturas(placaFactura,clienteBuscarFacturas,fechaInicial,fechaFinal)">Buscar</button>
+             <br />
+             <table class="table table-hover">
+               <thead>
+                 <tr>
+                   <th scope="col">Opciones</th>
+                   <th scope="col"># doc. interno</th>
+                   <th scope="col">Nombre Cliente</th>
+                   <th scope="col">Consecutivo DIAN</th>
+                   <th scope="col">TOTAL</th>
+                   
+                 </tr>
+               </thead>
+               <tbody>
+                 <tr *ngFor="let ordenes of facturasBuscarList">
+                   <th scope="row">
+                     <button type="button" class="btn btn-secondary btn-sm" data-toggle="modal"
+                       (click)="cargarFactura(ordenes)">
+                       Ver
+                     </button>
+                   </th>
+                   <td>{{ordenes.documento_id}}</td>
+                   <td>{{nombreClienteFun(ordenes.cliente_id)}}</td>
+                   <td>{{ordenes.consecutivo_dian}}</td>
+                   <td>{{formatearNumber(ordenes.total)}}</td>
+                 </tr>
+               </tbody>
+             </table>
+           </div>
+         </div>
+       </div>
+     </div>
+
     </div>
   </div>
 </div>
