--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -143,7 +143,7 @@
                 <textarea class="form-control " id="item" #item   placeholder="Nombre repuesto" required></textarea>
               </div>
               <div class="form-group col-md-6 col-sm-2">
-                <input class="form-control" id="cantidad" type="number" placeholder="* Cantidad" name="cantidad"
+                <input class="form-control" id="cantidad" type="number" placeholder="* Cantidad" name="cantidad" value="1"
                   #cantidad required>
               </div>
             </div>
