--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -75,17 +75,18 @@
                 </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-4 col-lg-6">
-                  <label for="rolUsuarioCrear">Lista Roles</label>
-              <select multiple class="form-control "  id="rolUsuarioCrear">
-                  <option *ngFor="let rol1 of rolList" (click)="seleccionarRol(rol1)" value="{{rol1.rol_id}}">{{rol1.nombre}}</option>
-                </select>
+              <div class="form-group col-md-4 col-lg-6 " >
+                <label for="rolUsuarioCrear">Lista Roles</label>
+                <div  id="rolUsuarioCrear" class="btn-group-vertical" >
+                  <button type="button" class="btn btn-primary" *ngFor="let rol1 of rolList" (click)="seleccionarRol(rol1)">{{rol1.nombre}}</button>
+                </div>
               </div>
               <div class="form-group col-md-4 col-lg-6">
-                  <label for="Activas">Roles Seleccionados</label>
-                  <select multiple class="form-control" id="Activas">
-                      <option *ngFor="let select1 of rolListSelect"  (click)="unSeleccionarRol(select1)" value="{{select1.rol_id}}">{{select1.nombre}}</option>
-                  </select>
+                  <label for="Activas">Roles Activos</label>
+                  <div  id="Activas" class="btn-group-vertical" >
+                    <button type="button" class="btn btn-primary" *ngFor="let select1 of rolListSelect"  (click)="unSeleccionarRol(select1)">{{select1.nombre}}</button>
+                  </div>
+               
                 </div>
             </div> 
             <div class="form-row">
