--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -295,6 +295,8 @@
           </div>
           <button type="button" class="btn btn-primary"
             (click)="buscarOrdenes(placaBuscar,clienteBuscarPV,fechaIni,fechaFin)">Buscar</button>
+            <button type="button" class="btn btn-primary ml-2"
+            (click)="buscarOrdenesHoy(placaBuscar,clienteBuscarPV)">Buscar ordenes de hoy</button>
           <br />
           <table class="table table-hover">
             <thead>
