--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -291,7 +291,7 @@
               <button type="button" class="btn btn-primary"
                 (click)="buscarOrdenes(placaBuscar,clienteBuscarPV,fechaIni,fechaFin)">Buscar</button>
                 <button type="button" class="btn btn-primary ml-2"
-                (click)="buscarOrdenesHoy(placaBuscar,clienteBuscarPV,fechaIni,fechaFin)">Buscar de Hoy</button>
+                (click)="buscarOrdenesHoy(placaBuscar,clienteBuscarPV)">Buscar de Hoy</button>
               <br />
               <table class="table table-hover">
                 <thead>
