ajuste en impresion de factura

--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -289,8 +289,8 @@
                 </option>
               </datalist>
             </div>
-            <div class="form-group col-md-6 col-sm-2">
-              <input class="form-control" id="placaBuscar" placeholder="Placa" name="placaBuscar" #placaBuscar required>
+            <div class="form-group col-md-6 col-sm-2 upper">
+              <input class="form-control upper" id="placaBuscar" placeholder="Placa" name="placaBuscar" #placaBuscar required>
             </div>
           </div>
           <button type="button" class="btn btn-primary"
