--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -67,8 +67,8 @@
             </option>
           </datalist>
         </div>
-        <div class="form-group col-md-4 col-sm-2">
-          <input class="form-control" id="placa" placeholder="* Placa" name="placa" #placa required
+        <div class="form-group col-md-4 col-sm-2 upper">
+          <input class="form-control upper" id="placa" placeholder="* Placa" name="placa" #placa required
             (blur)="agregarPlaca(placa)">
         </div>
       </div>
