--- a/src/app/ot/ot.component.html
+++ b/src/app/ot/ot.component.html
@@ -43,7 +43,7 @@
       <b>Fecha entrega:</b> {{documento.fecha_entrega | date: 'dd/MM/yyyy, h:mm a'}}
     </div>
     <div class="form-group col-md-4 col-sm-2">
-      <input list="browsers" name="clientePV" #clientePV placeholder="Cliente" class="form-control" id="clientePV"
+      <input list="browsers" name="clientePV" #clientePV [disabled]="documento.impreso==1" placeholder="Cliente" class="form-control" id="clientePV"
         (change)="clienteSelectFun(clientePV)">
       <datalist id="browsers">
         <option *ngFor="let cliente of clientes" [value]="cliente.nombre">
@@ -52,7 +52,7 @@
       </datalist>
     </div>
     <div class="form-group col-md-4 col-sm-2">
-      <input class="form-control" id="placa" placeholder="* Placa" name="placa" #placa required
+      <input class="form-control" id="placa" placeholder="* Placa" [disabled]="documento.impreso==1" name="placa" #placa required
         (blur)="agregarPlaca(placa)">
     </div>
   </div>
@@ -66,7 +66,7 @@
     </datalist>
     </div>
     <div class="form-group col-md-4 col-sm-2">
-      <input list="modelos" name="modelo" #modelo placeholder="modelo" class="form-control" id="modelo"
+      <input list="modelos" name="modelo" #modelo placeholder="modelo" [disabled]="documento.impreso==1" class="form-control" id="modelo"
       (change)="guardarModelo(modelo)">
     <datalist id="modelos">
       <option *ngFor="let model of modeloList" [value]="model.nombre"> 
@@ -74,7 +74,7 @@
     </datalist>
     </div>
     <div class="form-group col-md-4 col-sm-2">
-      <select class="form-control" id="linea" placeholder="Marca" #linea  (change)="asignarLinea(linea)">
+      <select class="form-control" id="linea" placeholder="Marca" #linea [disabled]="documento.impreso==1" (change)="asignarLinea(linea)">
         <option>Seleccione Linea</option>
         <option>Automovil</option>
         <option>Camioneta</option>
@@ -83,17 +83,17 @@
     </div>
   </div>
   <div class="form-row">
-    <textarea class="form-control " id="descripcionCliente" #descripcionCliente placeholder="Descripción cliente"
+    <textarea class="form-control " id="descripcionCliente" #descripcionCliente placeholder="Descripción cliente" [disabled]="documento.impreso==1"
       required (blur)="agregarDescripcionCliente(descripcionCliente)"></textarea>
   </div>
   <br />
   <div class="form-row">
     <div class="form-group col-md-6 col-sm-1">
-      <textarea class="form-control " (blur)="agregarObservacion(observacion)" id="observacion" #observacion
+      <textarea class="form-control " (blur)="agregarObservacion(observacion)" [disabled]="documento.impreso==1" id="observacion" #observacion
         placeholder="Observación" required></textarea>
     </div>
     <div class="form-group col-md-6 col-sm-1">
-      <input type="file" class="form-control-file" capture="camera" #fotoOrden id="fotoOrden"
+      <input type="file" class="form-control-file" capture="camera" #fotoOrden id="fotoOrden" [disabled]="documento.impreso==1"
         aria-describedby="fileHelp" (change)="cargarFotoOrden($event)">
     </div>
   </div>
@@ -112,7 +112,7 @@
   <br />
   <div class="form-row">
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    <button type="button" class="btn btn-primary" [disabled]="documento.impreso==1" data-toggle="modal" data-target="#exampleModal">
       Agregar repuesto
     </button>
 
@@ -184,12 +184,12 @@
     <tbody>
       <tr *ngFor="let ordenes of detallesList">
         <th scope="row">
-          <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm"
+          <button type="button" (click)="editarItem(ordenes)" class="btn btn-secondary btn-sm" [disabled]="documento.impreso==1"
             data-toggle="modal" data-target="#exampleModal">
             Editar
           </button>
           <!-- Button trigger modal -->
-          <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal"
+          <button type="button" (click)="eliminarItem(ordenes)" class="btn btn-secondary btn-sm" data-toggle="modal" [disabled]="documento.impreso==1"
             data-target="#eliminarModal">
             Eliminar
           </button>
