--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -118,6 +118,17 @@
         </div>
       </div>
       <div class="form-row">
+        <div class="form-group col-md-4 col-sm-2" *ngIf="empleadoOrdenActivo">
+          <input list="browsersEmpreados" name="empleadoPV" #empleadoPV [disabled]="documento.impreso==1" placeholder="Empleado" class="form-control" id="empleadoPV"
+            (change)="empleadoSelectFun(empleadoPV)">
+          <datalist id="browsersEmpreados">
+            <option *ngFor="let empleado of empleados" [value]="empleado.nombre">
+               {{empleado.apellido}} 
+            </option>
+          </datalist>
+        </div>
+      </div>         
+      <div class="form-row">
         <div class="form-group col-md-6 col-sm-1">
           <!-- Button trigger modal -->
           <button type="button" class="btn btn-primary" data-toggle="modal" [disabled]="documento.impreso==1" data-target="#exampleModal">
